PR/39157: Markus Mayer: traceroute not 64 bit aware (struct timeval issue)